--- a/SDL_Palette.mediawiki
+++ b/SDL_Palette.mediawiki
@@ -46,4 +46,4 @@ You can add your code example here
 :[[SDL_SetPaletteColors]]
 
 ----
-[[CategoryStruct]], [[CategoryPixelsStruct]]
+[[CategoryStruct]], [[CategoryPixels|Pixels Group]]
