--- a/SDL_AtomicUnlock.mediawiki
+++ b/SDL_AtomicUnlock.mediawiki
@@ -23,7 +23,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-/!\ The spin lock functions and type are required and can not be emulated because they are used in the emulation code.
+The spin lock functions and type are required and can not be emulated because they are used in the emulation code.
 
 == Related Functions ==
 :[[SDL_AtomicLock]]
