--- a/SDL_SwapLE16.mediawiki
+++ b/SDL_SwapLE16.mediawiki
@@ -29,6 +29,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_Swap16]]
 :[[SDL_SwapBE16]]
 
 ----
