--- a/SDL_Swap16.mediawiki
+++ b/SDL_Swap16.mediawiki
@@ -18,7 +18,7 @@ Uint16 SDL_Swap16(Uint16 x)
 |}
 
 == Return Value ==
-The swapped data. ???
+Returns the swapped data. ???
 
 == Code Examples ==
 ```c++
