--- a/SDL_SwapLE16.mediawiki
+++ b/SDL_SwapLE16.mediawiki
@@ -18,7 +18,7 @@ Uint16 SwapLE16(Uint16 x)
 |}
 
 == Return Value ==
-The data in native Uint16 format. ???
+Returns the data in native Uint16 format. ???
 
 == Code Examples ==
 ```c++
