--- a/SDL_SwapLE64.mediawiki
+++ b/SDL_SwapLE64.mediawiki
@@ -18,7 +18,7 @@ Uint64 SDL_SwapLE64(Uint64 x)
 |}
 
 == Return Value ==
-The data in native Uint64 format. ???
+Returns the data in native Uint64 format. ???
 
 == Code Examples ==
 ```c++
