update content (old wiki); repaired include from SDL_Init

--- a/SDL_InitSubSystem.mediawiki
+++ b/SDL_InitSubSystem.mediawiki
@@ -19,19 +19,41 @@ int SDL_InitSubSystem(Uint32 flags)
 == Return Value ==
 Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
+*<br/><<Color2(green,Old wiki says error code is -1. Is it still?)>><br/>*
+
 == Code Examples ==
 ```c++
-You can add your code example here
+/* Separating Joystick and Video initialization. */
+SDL_Init(SDL_INIT_VIDEO);
+.
+.
+SDL_SetVideoMode(640, 480, 16, SDL_DOUBLEBUF|SDL_FULLSCREEN);
+.
+/* Do Some Video stuff */
+.
+.
+/* Initialize the joystick subsystem */
+SDL_InitSubSystem(SDL_INIT_JOYSTICK);
+
+/* Do some stuff with video and joystick */
+.
+.
+.
+/* Shut them both down */
+SDL_Quit();
 ```
 
 == Remarks ==
 <span id="flags"></span>These are the flags which may be passed to [[SDL_InitSubSystem]]() and may be OR'd together to initialize multiple subsystems simultaneously. 
-<<Include(SDL_Init, , , from="initiate multiple subsystems.", to="This function loads")>>
+<<Include(SDL_Init, , , from="OR'd together:", to="Unless the")>>
+
+*<br/>After SDL has been initialized with [[SDL_Init]]() you may initialize uninitialized subsystems with [[SDL_InitSubSystem]]().<br/>*
 
 [[SDL_Init]]() initializes assertions and crash protection and then calls [[SDL_InitSubSystem]]().  If you want to bypass those protections you can call [[SDL_InitSubSystem]]() directly.
 
 == Related Functions ==
 :[[SDL_Init]]
+:[[SDL_Quit]]
 :[[SDL_QuitSubSystem]]
 
 ----
