--- a/SDL_LoadFunction.mediawiki
+++ b/SDL_LoadFunction.mediawiki
@@ -1,6 +1,9 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|}
+
 
 = SDL_LoadFunction =
 Use this function to look up the address of ,,the,, ^a^ named function in the shared object and return it.
@@ -14,11 +17,11 @@ void* SDL_LoadFunction(void*       handle,
 
 == Function Parameters ==
 {|
-|'''handle'''
-|*a valid shared object handle returned by [[SDL_LoadObject]]()*
+|'''handle''' 
+|*a valid shared object handle returned by [[SDL_LoadObject]]()* 
 |-
-|'''name'''
-|^a pointer to the named function in the shared object^ ''-or-'' *the null terminated string of the function's name to look up*
+|'''name''' 
+|^a pointer to the named function in the shared object^ ''-or-'' *the null terminated string of the function's name to look up* 
 |}
 
 == Return Value ==
@@ -55,7 +58,7 @@ else {
 == Remarks ==
 This address is no longer valid after calling [[SDL_UnloadObject]]().
 
-*<br/>Given a valid shared object handle returned by [[SDL_LoadObject]](), this function looks up the address of the named function in the shared object and returns it. 
+*<br/>Given a valid shared object handle returned by [[SDL_LoadObject]](), this function looks up the address of the named function in the shared object and returns it.
 
 These functions only work on C function names. Other languages may have name mangling and intrinsic language support that varies from compiler to compiler.
 
@@ -64,8 +67,8 @@ Make sure you declare your function pointers with the same calling convention as
 Avoid namespace collisions. If you load a symbol from the library, it is not defined whether or not it goes into the global symbol namespace for the application. If it does and it conflicts with symbols in your code or other shared libraries, you will not get the results you expect.<br/>*
 
 == Related Functions ==
-:[[SDL_LoadObject]]
-:[[SDL_UnloadObject]]
+: [[SDL_LoadObject]] *
+: [[SDL_UnloadObject]] *
 
 ----
-[[CategoryAPI]], [[CategorySharedObject]]
+[[CategoryAPI]], CategorySharedObject
