--- a/SDL_Delay.mediawiki
+++ b/SDL_Delay.mediawiki
@@ -23,9 +23,10 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>This function waits a specified number of milliseconds before returning. It waits at least the specified time, but possibly longer due to OS scheduling. The delay granularity is at least 10 ms. Some platforms have shorter clock ticks but this is the most common.<br/>*
 
 == Related Functions ==
+:[[SDL_AddTimer]] *
 
 ----
 [[CategoryAPI]], [[CategoryTimer]]
