--- a/SDL_GetError.mediawiki
+++ b/SDL_GetError.mediawiki
@@ -1,5 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+'''DRAFT'''
 
 = SDL_GetError =
 Use this function to retrieve a message about the last error that occurred.
