add 'draft' note

--- a/SDL_ClearError.mediawiki
+++ b/SDL_ClearError.mediawiki
@@ -1,5 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+'''DRAFT'''
 
 = SDL_ClearError =
 Use this function to clear any previous error message.
