--- a/SDL_JoystickGetAxis.mediawiki
+++ b/SDL_JoystickGetAxis.mediawiki
@@ -18,21 +18,31 @@ Sint16 SDL_JoystickGetAxis(SDL_Joystick* joystick,
 |a pointer to a structure containing joystick information ???
 |-
 |'''axis'''
-|the axis indices^;^ start^s^ at index 0
+|^the axis to query; the axis indices start at index 0; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
+*<br/>Returns a 16-bit signed integer representing the current position of the axis.<br/>*
+
 The state is a value ranging from -32768 to 32767. <<Color2(green,Is this the RV or a Remark?)>>
 
 == Code Examples ==
 ```c++
-You can add your code example here
+Sint16 x_move, y_move;
+SDL_Joystick *joy1;
+.
+.
+x_move=SDL_JoystickGetAxis(joy1, 0);
+y_move=SDL_JoystickGetAxis(joy1, 1);
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>On most modern joysticks the X axis is usually represented by '''axis''' 0 and the Y axis by '''axis''' 1. The value returned by [[SDL_JoystickGetAxis]]() is a signed integer (-32768 to 32767) representing the current position of the axis.  It may be necessary to impose certain tolerances on these values to account for jitter.
+
+Some joysticks use axes 2 and 3 for extra buttons.<br/>*
 
 == Related Functions ==
+:[[SDL_JoystickNumAxes]] *
 
 ----
 [[CategoryAPI]], [[CategoryJoystick]]
