--- a/SDL_JoystickInstanceID.mediawiki
+++ b/SDL_JoystickInstanceID.mediawiki
@@ -29,6 +29,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_JoystickOpen]] *
 
 ----
 [[CategoryAPI]], [[CategoryJoystick]]
