--- a/SDL_JoystickNumHats.mediawiki
+++ b/SDL_JoystickNumHats.mediawiki
@@ -29,6 +29,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_JoystickGetHat]] *
+:[[SDL_JoystickOpen]] *
 
 ----
 [[CategoryAPI]], [[CategoryJoystick]]
