--- a/SDL_JoystickGetAttached.mediawiki
+++ b/SDL_JoystickGetAttached.mediawiki
@@ -14,7 +14,7 @@ int SDL_JoystickOpened(int device_index)
 == Function Parameters ==
 {|
 |'''device_index'''
-|the index of the joystick to query
+|^the index of the joystick to query^ / *the N'th joystick on the system*
 |}
 
 == Return Value ==
@@ -29,6 +29,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_JoystickClose]] *
+:[[SDL_JoystickOpen]] *
 
 ----
 [[CategoryAPI]], [[CategoryJoystick]]
