update content (old wiki)

--- a/SDL_GetMouseState.mediawiki
+++ b/SDL_GetMouseState.mediawiki
@@ -22,20 +22,23 @@ Uint8 SDL_GetMouseState(int* x,
 |}
 
 == Return Value ==
-Returns an 8 bit button bitmask of the current button state. ???
+Returns an 8 bit button bitmask of the current button state.
 
 == Code Examples ==
 ```c++
-You can add your code example here
+SDL_PumpEvents();
+if(SDL_GetMouseState(NULL, NULL)&SDL_BUTTON(1))
+  printf("Mouse Button 1(left) is pressed.\n");
 ```
 
 == Remarks ==
-The current button state is returned as a button bitmask, which can be tested using the SDL_BUTTON(X) macros, and '''x''' and '''y''' are set to the mouse cursor position relative to the focus window for the current,,ly selected,, mouse. You can pass NULL for either '''x''' or '''y'''. 
+The current button state is returned as a button bitmask, which can be tested using the SDL_BUTTON(X) macros *(where X is generally 1 for the left, 2 for middle, 3 for the right button)*, and '''x''' and '''y''' are set to the mouse cursor position relative to the focus window for the current,,ly selected,, mouse. You can pass NULL for either '''x''' or '''y'''. 
 
-<<Color2(green,Should the first sentence be split into two?  Should the subscripted portion be removed to reflect the lack of multi-mouse support?)>>
+<<Color2(green,Suggest splitting the first sentence into two.  Should the subscripted portion be removed to reflect the lack of multi-mouse support?)>>
 
 == Related Functions ==
-:[[SDL_GetRelativeMouseState]] ??? 
+:[[SDL_GetRelativeMouseState]] *
+:[[SDL_PumpEvents]] *
 
 ----
 [[CategoryAPI]], [[CategoryMouse]]
