--- a/SDL_SetCursor.mediawiki
+++ b/SDL_SetCursor.mediawiki
@@ -18,15 +18,22 @@ void SDL_SetCursor(SDL_Cursor* cursor)
 |}
 
 == Code Examples ==
+*
 ```c++
-You can add your code example here
+int main(int argc, char** argc) {
+     SDL_ShowCursor(SDL_DISABLE);
+     ...
+}
+/* creates a blank cursor */
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>This function sets the currently active cursor to the specified one. If the cursor is currently visible, the change will be immediately represented on the display. [[SDL_SetCursor]](NULL) can be used to force cursor redraw, if this is desired for any reason. <br/>*
 
 == Related Functions ==
-:[[SDL_CreateCursor]] ???
+:[[SDL_CreateCursor]] *
+:[[SDL_GetCursor]] *
+:[[SDL_ShowCursor]] *
 
 ----
 [[CategoryAPI]], [[CategoryMouse]]
