--- a/SDL_CondBroadcast.mediawiki
+++ b/SDL_CondBroadcast.mediawiki
@@ -29,7 +29,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_CondSignal]] ???
+:[[SDL_CondSignal]] *
+:[[SDL_CondWait]] *
 
 ----
 [[CategoryAPI]], [[CategoryMutex]]
