--- a/SDL_PixelFormatEnum.mediawiki
+++ b/SDL_PixelFormatEnum.mediawiki
@@ -241,4 +241,4 @@ You can add your code example here
 :[[SDL_RenderWritePixels]]
 
 ----
-[[CategoryEnum]], [[CategoryPixels|Pixels Group]]
+[[CategoryEnum]], [[CategoryPixels]]
