--- a/CategoryPixels.mediawiki
+++ b/CategoryPixels.mediawiki
@@ -13,7 +13,7 @@
 This category contains functions for handling pixel, palette, and color formats and conversions.
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum "Pixels Group")>>
+<<FullSearch(category:CategoryEnum CategoryPixels)>>
 
 == Structures ==
 <<FullSearch(category:CategoryStruct "Pixels Group")>>
