changed strategy, starting changes over

--- a/SDLEnumTemplate.mediawiki
+++ b/SDLEnumTemplate.mediawiki
@@ -32,3 +32,6 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_FunctionLeaveSectionIfEmpty]]
+
+----
+[[CategoryEnum]], [[CategoryHeaderEnum]]
