--- a/SDLStructTemplate.mediawiki
+++ b/SDLStructTemplate.mediawiki
@@ -40,4 +40,4 @@ You can add your code example here
 :[[SDL_FunctionLeaveSectionIfEmpty]]
 
 ----
-[[CategoryStruct]], [[CategoryHeaderStruct]]
+[[CategoryStruct]], [[CategoryHeader]]
