update content (w/ Sam); remove 'draft' note

--- a/SDL_GetError.mediawiki
+++ b/SDL_GetError.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetError =
 Use this function to retrieve a message about the last error that occurred.
@@ -8,29 +7,29 @@ Use this function to retrieve a message about the last error that occurred.
 
 == Syntax ==
 ```c++
-char* SDL_GetError(void)
+const char* SDL_GetError(void)
 ```
 
 == Return Value ==
 Returns a message with information about the specific error that occurred, or an empty string if there hasn't been an error since the last call to [[SDL_ClearError]]().
 
-*<br/>This string is statically allocated and must not be freed by the user. <br/>*
+This string is statically allocated and must not be freed by the user.
 
 == Code Examples ==
 ```c++
-if (SDL_Init( SDL_INIT_EVERYTHING ) == -1) {
+if (SDL_Init( SDL_INIT_EVERYTHING ) <0) {
     // Unrecoverable error, exit here.
     printf("SDL_Init failed: %s\n", SDL_GetError());
 }
 ```
-*<br/>Note: Although this example uses [[SDL_Init]](), [[SDL_GetError]]() provides an error message for any failed SDL operation. <br/>*
+Note: Although this example uses [[SDL_Init]](), [[SDL_GetError]]() provides an error message for any failed SDL operation.
 
 == Remarks ==
 It is possible for multiple errors to occur before calling [[SDL_GetError]]().  Only the last error is returned.
 
 == Related Functions ==
 :[[SDL_ClearError]]
-:[[SDL_SetError]] *
+:[[SDL_SetError]]
 
 ----
 [[CategoryAPI]], [[CategoryError]]
