--- a/SDL_GetError.mediawiki
+++ b/SDL_GetError.mediawiki
@@ -13,11 +13,11 @@ const char* SDL_GetError(void)
 == Return Value ==
 Returns a message with information about the specific error that occurred, or an empty string if there hasn't been an error since the last call to [[SDL_ClearError]]().
 
-This string is statically allocated and must not be freed by the user.
+This string is statically allocated and must not be freed by the application.
 
 == Code Examples ==
 ```c++
-if (SDL_Init( SDL_INIT_EVERYTHING ) <0) {
+if (SDL_Init( SDL_INIT_EVERYTHING ) < 0) {
     // Unrecoverable error, exit here.
     printf("SDL_Init failed: %s\n", SDL_GetError());
 }
