--- a/SDL_SetError.mediawiki
+++ b/SDL_SetError.mediawiki
@@ -26,7 +26,12 @@ SDL_SetError("Something unexpected happened!");
 ```
 
 ```c++
-SDL_SetError("Something unexpected happened: Error Code %d", -37);
+int errorCode = 0;
+...
+errorCode = -37;
+...
+if (errorCode < 0)
+    SDL_SetError("Something unexpected happened: Error Code %d", errorCode);
 ```
 
 == Remarks ==
